# mira

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.scripts/: analyze_profiling.py  build_profiling.py
benches/poseidon/: main.rs
benches/trivial/: main.rs
examples/: cli.rs  poseidon.rs
examples/groth16/: circuit.rs  conversion.rs  main.rs  mod.rs  util.rs
examples/merkle/: ipa.rs  kzg.rs  mod.rs
examples/trivial/: main.rs
examples/zkml/: circuit.rs  main.rs  mod.rs  util.rs
src/: fft.rs  lib.rs  main_gate.rs  sps.rs  traits.rs  util.rs
src/gadgets/: ecc.rs  ecc2.rs  fp12.rs  fp2.rs  mod.rs
src/gadgets/merkle_tree_gadget/: mod.rs
src/gadgets/nonnative/bn/big_uint_mul_mod_chip/: mod.rs
src/ivc/: fold_relaxed_plonk_instance_chip.rs  incrementally_verifiable_computation.rs  instance_computation.rs  public_params.rs  step_folding_circuit.rs
src/nifs/: mod.rs
src/nifs/protogalaxy/: accumulator.rs  mod.rs  tests.rs
src/nifs/protogalaxy/poly/: mod.rs
src/nifs/vanilla/: mod.rs  tests.rs
src/plonk/: mod.rs
src/poseidon/: poseidon_circuit.rs  poseidon_hash.rs  random_oracle.rs
src/table/: circuit_runner.rs  constraint_system_metainfo.rs  tests.rs
