[package]
name = "mira"
version = "0.2.0"
authors = [
    "chaosma <chao@snarkify.io>",
    "cyphersnake <mikhail@snarkify.io>",
    "joshbeal <josh@beal.io>",
]
repository = "https://github.com/joshbeal/mira"
description = "An efficient folding framework for pairing-based arguments."
keywords = [
    "cryptography",
    "ivc",
    "nova",
    "mira",
    "proof-system",
    "protogalaxy",
    "zero-knowledge-proofs",
    "zkp",
]
edition = "2021"
license = "MIT"

[dependencies]
bincode = "1.3"
bitter = "0.7.0"
count-to-non-zero = "0.3.0"
digest = "0.10"
hex = { version = "0.4.3" }
itertools = "0.13.0"
num-bigint = "0.4.3"
num-traits = "0.2.16"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
rand_chacha = "0.3"
rayon = "1.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1.0"
sha2 = { version = "^0.10" }
sha3 = "0.10"
some-to-err = "0.2.1"
subtle = "2.4"
thiserror = "1"
tracing = { version = "0.1", features = ["attributes"] }

ark-bn254 = "0.4.0"
ark-ff = { version = "0.4.2", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false, features = [ "derive" ] }
ark-poly = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }

[dependencies.poseidon]
git = "https://github.com/joshbeal/poseidon"
branch = "joshbeal/dev-mira"

[dependencies.halo2_proofs]
git = "https://github.com/joshbeal/halo2"
branch = "joshbeal/dev-mira"

[dev-dependencies]
bincode = "1.3"
clap = { version = "4.5.4", features = ["derive"] }
criterion = "0.5.1"
dhat = "0.3.3"
git2 = "0.19.0"
maplit = "1.0.2"
prettytable-rs = "0.10.0"
rand_xorshift = "0.3"
tempfile = "3.9.0"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-test = "0.2.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["prepush-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]

[[bench]]
name = "trivial"
harness = false

[[bench]]
name = "poseidon"
harness = false

[features]
# Allows cli-example to check memory usage with dhat
dhat-heap = []
